--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "address-book-connector.js",
   "version": "1.0.0",
   "description": "Connect your users's address books to other services simply and securely.",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "https://github.com/cloudsponge/address-book-connector.js.git",
   "author": "Graeme Rouse <graeme@cloudsponge.com>",
   "license": "MIT",
