--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "address-book-connector.js",
+  "name": "@cloudsponge/address-book-connector.js",
   "version": "1.0.2",
   "description": "Connect your users's address books to other services simply and securely.",
   "main": "src/index.js",
-  "repository": "https://github.com/cloudsponge/address-book-connector.js.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cloudsponge/address-book-connector.js.git"
+  },
   "author": "Graeme Rouse <graeme@cloudsponge.com>",
   "license": "MIT",
   "scripts": {
@@ -36,5 +39,19 @@
     "rollup-plugin-size-snapshot": "^0.10.0",
     "rollup-plugin-strip": "^1.2.2",
     "rollup-plugin-uglify": "^6.0.3"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/cloudsponge/address-book-connector.js/issues"
+  },
+  "homepage": "https://github.com/cloudsponge/address-book-connector.js#readme",
+  "directories": {
+    "test": "test"
+  },
+  "keywords": [
+    "referral program",
+    "address book",
+    "contacts",
+    "email",
+    "cloudsponge"
+  ]
 }
