--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "regenerator-runtime": "^0.13.3",
     "rollup": "^1.21.2",
     "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
