--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "private": false,
   "name": "@cloudsponge/address-book-connector.js",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Connect your users's address books to other services simply and securely.",
-  "main": "src/index.js",
+  "main": "dist/address-book-connector.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cloudsponge/address-book-connector.js.git"
@@ -22,9 +22,7 @@
     "build:dist": "rollup -c",
     "build": "yarn build:clean && yarn build:dist"
   },
-  "dependencies": {
-    "lodash": "^4.17.15"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
