--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "@cloudsponge/address-book-connector.js",
   "version": "1.0.8",
   "description": "Connect your users's address books to other services simply and securely.",
-  "main": "dist/address-book-connector.js",
+  "main": "dist/address-book-connector.min.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cloudsponge/address-book-connector.js.git"
