--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "babel-eslint": "^10.0.3",
     "core-js": "^3.2.1",
     "eslint": "^6.3.0",
@@ -35,10 +38,7 @@
     "prettier": "^1.18.2",
     "regenerator-runtime": "^0.13.3",
     "rollup": "^1.21.2",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-copy": "^3.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-size-snapshot": "^0.10.0",
