--- a/package.json
+++ b/package.json
@@ -24,27 +24,28 @@
     "audit:fix": "npm install --package-lock-only; npm audit fix --force; rm yarn.lock; yarn import; rm package-lock.json; yarn install"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
-    "@rollup/plugin-babel": "^5.2.1",
-    "@rollup/plugin-commonjs": "^15.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "babel-eslint": "^10.0.3",
-    "core-js": "^3.2.1",
-    "eslint": "^6.3.0",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-jest": "^22.17.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "jest": "^26.6.3",
-    "prettier": "^1.18.2",
-    "regenerator-runtime": "^0.13.3",
-    "rollup": "^1.21.2",
-    "rollup-plugin-copy": "^3.1.0",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-serve": "^1.0.1",
-    "rollup-plugin-size-snapshot": "^0.10.0",
-    "rollup-plugin-strip": "^1.2.2",
-    "rollup-plugin-uglify": "^6.0.3"
+    "@babel/core": "^7.24.0",
+    "@babel/eslint-parser": "^7.23.10",
+    "@babel/preset-env": "^7.24.0",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-replace": "^5.0.5",
+    "@rollup/plugin-strip": "^3.0.4",
+    "@rollup/plugin-terser": "^0.4.4",
+    "core-js": "^3.36.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^3.2.5",
+    "regenerator-runtime": "^0.14.1",
+    "rollup": "^4.12.1",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-serve": "^1.1.1"
   },
   "resolutions": {
     "glob-parent": "^5.1.2",
